added vroom to suggestions

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ library(tidyrhrv)
 dir.create("./folder_name")
 
 ## read in the data using any appropriate function
-data <- read_tilt("path", readr::read_csv) %>% 
+data <- read_tilt("path", vroom::vroom) %>% 
         
 # preps data to be used by subsequent functions
 # tell it what is your time var, Heart Beat, and RR series vectors
